--- a/education.html
+++ b/education.html
@@ -43,7 +43,7 @@
 
     <div class="scrollable-frame">
         <div class="pic">
-            <img alt="CISCE Logo" class="logo" src="cisce.jpeg">
+            <img alt="CBSE Logo" class="logo" src="Cbselogo.png">
         </div>
         <h3>Higher Secondary</h3>
         <p>Completed my Higher Secondary Exam under the Central Board of Secondary Educaton with a score of 84.6%. This exam
