--- a/experience.html
+++ b/experience.html
@@ -35,10 +35,10 @@
             <img alt="Poster Presentation Logo" class="logo" src="poster.jpge">
         </div>
         <h3>Poster Presentations</h3>
-        <p>Our team of five—Deepali Singh, Rashi Agrawal, Astuti Kumari, Atri Ghosh, Spandan Bhattacharjee—participated
-            in the poster presentation challenge with our project on "AI-Powered Genomics: Revolutionizing Personalized
-            Healthcare Through Telemedicine." We demonstrated the impact of AI in genetic engineering through
-            collaborative research and creative presentation. This experience showcased our teamwork and research
+        <p>Our team of five—Anwesh Banerjee, Darshan Raj, Subham Musib, Tuhin Das, Shubham Kumar Singh—participated
+            in the poster presentation challenge with our project on "Symphony of Biosensors and Ai for Revolutionizing 
+            the World." We demonstrated the impact of AI along with Biosensors through collaborative research and 
+            creative presentation. This experience showcased our teamwork and research
             skills.</p>
     </div>
 
